# airflow-scheduler-failover-controller

./: .gitignore  CHANGELOG.md  README.md  airflow-scheduler-failover.py  setup.cfg  setup.py
scheduler-failover/: shutdown-scheduler-failover.sh
scheduler_failover_controller/: __init__.py  app.py  configuration.py  kill_scheduler.sh
scheduler_failover_controller/command_runner/: command_runner.py
scheduler_failover_controller/command_runnner/: __init__.py  command_runner.py
scheduler_failover_controller/emailer/: emailer.py
scheduler_failover_controller/failover/: failover_controller.py
scheduler_failover_controller/logger/: logger.py
scheduler_failover_controller/metadata/: base_metadata_service.py  sql_metadata_service.py  zookeeper_metadata_service.py
scheduler_failover_controller/utils/: date_utils.py  ssh_utils.py
scripts/deploy/: setup_airflow_systemd_scripts.sh  setup_scheduler_failover_controller_systemd_scripts.sh
scripts/systemd/: README.md  scheduler_failover_controller.service
scripts/systemd/deploy/: README.md  setup_airflow_systemd_scripts.sh  setup_scheduler_failover_controller_systemd_scripts.sh
