[metadata]
name = Airflow Scheduler Failover Controller
summary = A process that runs in unison with Apache Airflow to control the Scheduler process to ensure High Availability
description-file = README.md
author = Robert Sanders
author-email = robert.sanders@clairvoyantsoft.com
license = Apache License, Version 2.0

[files]
packages = scheduler_failover_controller

